[#1850] fix select appearing out of place

--- a/Dashboard/app/css/main.scss
+++ b/Dashboard/app/css/main.scss
@@ -3921,7 +3921,7 @@ div.chooseSurveyData {
     position: relative;
     display: block;
     float: left;
-    margin: 10px 0;
+    margin: -30px 0 10px 0;
     width: 100%;
     height: 20px;
 }
